modifying displaying messages

--- a/url_shortener/templates/invalid.html
+++ b/url_shortener/templates/invalid.html
@@ -4,7 +4,7 @@
 <div class="row-fluid">
   <div class="span6 offset4">
     <blockquote>
-      <p>Invalid data was supplied to the URL shortener</p>
+      <p>Invalid URL was supplied to the URL Shortener</p>
     </blockquote>
     <ul class="nav nav-pills">
       <li><a href="/">take me home</a></li>
