--- a/url_shortener/templates/missing.html
+++ b/url_shortener/templates/missing.html
@@ -4,8 +4,7 @@
 <div class="row-fluid">
   <div class="span6 offset4">
     <blockquote>
-      <p>Unfortunately, we have no URL associated with this short code</p>
-      <small>Usually, our shortcode are 6 alphanumerical characters.</small>
+      <p>Unfortunately, we have no URL associated with the provided URL</p>
     </blockquote>
     <ul class="nav nav-pills">
       <li><a href="/">take me home</a></li>
